--- a/domains/auth/Auth.API/API/Dockerfile
+++ b/domains/auth/Auth.API/API/Dockerfile
@@ -1,9 +1,11 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
+ARG SDK_VERSION
+ARG RUNTIME_VERSION
+FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION}-alpine3.17 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
 WORKDIR /src
 COPY ["Auth.API/API/API.csproj", "Auth.API/API/"]
 RUN dotnet restore "Auth.API/API/API.csproj"
