--- a/domains/certificates/RegistryConnector/Worker/Dockerfile
+++ b/domains/certificates/RegistryConnector/Worker/Dockerfile
@@ -1,12 +1,11 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+ARG SDK_VERSION
+ARG RUNTIME_VERSION
+FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION} AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-RUN apt-get -y update && apt-get -y install wget
-HEALTHCHECK CMD wget -qO- http://localhost/health > /dev/null || exit 1
-
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION} AS build
 WORKDIR /src
 COPY ["RegistryConnector/Worker/Worker.csproj", "RegistryConnector/Worker/"]
 RUN dotnet restore "RegistryConnector/Worker/Worker.csproj"
@@ -18,6 +17,8 @@ FROM build AS publish
 RUN dotnet publish "Worker.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
+RUN apt-get -y update && apt-get -y install wget && apt-get clean
 WORKDIR /app
 COPY --from=publish /app/publish .
+HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
 ENTRYPOINT ["dotnet", "RegistryConnector.Worker.dll"]
