--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -8,20 +8,28 @@ inputs:
     required: true
 
   dotnet-version:
-    description: The version of dotnet to setup
-    default: 6.0.101
-    required: false
+    description: The version of dotnet to use
+    default: 7.0.x
+    required: true
 
 runs:
   using: composite
 
   steps:
-    - uses: actions/checkout@v3
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
+
+    - name: Print dotnet information
+      shell: bash
+      working-directory: ${{ inputs.solution-file-folder }}
+      run: dotnet --info
+
+    - name: Print dotnet version
+      shell: bash
+      working-directory: ${{ inputs.solution-file-folder }}
+      run: dotnet --version
 
     - name: Ensure solution or project exists
       shell: bash
