--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Resolve paths
+      - name: Resolve values
         shell: bash
         run: |
           solution=$(dirname "${{ matrix.projects.project }}")
@@ -60,13 +60,21 @@ jobs:
           printf 'Solution: %s\n' "$solution"
           printf 'Project: %s\n' "$project"
 
+          [ -f "$solution/global.json" ] || cp "$solution/../../../global.json" "$solution/global.json"
+          sdk=$(jq -rce '.sdk.version' "$solution/global.json")
+
           echo "SOLUTION=$solution" >> $GITHUB_ENV
           echo "PROJECT=$project" >> $GITHUB_ENV
+          echo "SDK_VERSION=$sdk" >> $GITHUB_ENV
 
       - name: Resolve version
         id: resolve-version
         shell: bash
         run: echo "result=$(yq '.version' ${{ env.SOLUTION }}/version.yaml)" >> $GITHUB_OUTPUT
+
+      - name: Pin dotnet version
+        shell: bash
+        run: echo '{"sdk":{"rollForward":"disable","version":"${{ env.SDK_VERSION }}"}}' > "${{ env.SOLUTION }}/global.json"
 
       - name: Build library
         uses: ./.github/actions/dotnet-publish-nuget-package
@@ -75,3 +83,4 @@ jobs:
           project-name: ${{ env.PROJECT }}
           package-version: ${{ steps.resolve-version.outputs.result }}
           nuget-api-key: ${{ secrets.NUGET_API_KEY }}
+          dotnet-version: ${{ env.SDK_VERSION }}
