Initial Structurizr files for Energy Origin, for testing pipelines.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Structurizr Lite files
+.structurizr/
+
 # User-specific files
 *.rsuser
 *.suo
