--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,6 @@
         "EditorConfig.EditorConfig",
         "redhat.vscode-yaml",
         "hediet.vscode-drawio",
+        "systemticks.c4-dsl-extension",
     ]
 }
