--- a/domains/certificates/Query.API/API.IntegrationTests/API.IntegrationTests.csproj
+++ b/domains/certificates/Query.API/API.IntegrationTests/API.IntegrationTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="Testcontainers" Version="3.0.0" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.0.0" />
     <PackageReference Include="Testcontainers.RabbitMq" Version="3.0.0" />
