--- a/.github/workflows/structurizr-update-pages.yaml
+++ b/.github/workflows/structurizr-update-pages.yaml
@@ -5,6 +5,17 @@ on:
   workflow_dispatch: {}
 
 jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Env
+        shell: bash
+        run: env
+
+      - name: Event
+        shell: bash
+        run: cat "$GITHUB_EVENT_PATH"
+
   setup:
     if: ${{ github.ref_name == '1564-c4-models' }}
     runs-on: ubuntu-latest
