--- a/.github/workflows/structurizr-update-pages.yaml
+++ b/.github/workflows/structurizr-update-pages.yaml
@@ -31,7 +31,7 @@ jobs:
         run: echo "matched=${{ steps.changes.outputs.matched }}" >> $GITHUB_ENV
 
       - name: Trigger build by workflow dispatch
-        if: github.event_name == 'workflow_dispatch'
+        # if: github.event_name == 'workflow_dispatch'
         shell: bash
         run: echo "matched=true" >> $GITHUB_ENV
 
