--- a/domains/certificates/RegistryConnector/Worker/Worker.csproj
+++ b/domains/certificates/RegistryConnector/Worker/Worker.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -32,11 +32,11 @@
     <ProjectReference Include="..\..\Shared\Contracts\Contracts.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos\primitives.proto" ProtoRoot="Protos" GrpcServices="None">
-      <SourceUrl>https://raw.githubusercontent.com/project-origin/wallet/wallet-v0.1.0-rc.3/src/Protos/primitives.proto</SourceUrl>
+	  <Protobuf Include="Protos\primitives.proto" ProtoRoot="Protos">
+      <SourceUrl>https://raw.githubusercontent.com/project-origin/wallet/wallet-v0.1.0-rc.4/src/Protos/primitives.proto</SourceUrl>
     </Protobuf>
     <Protobuf Include="Protos\wallet.proto" ProtoRoot="Protos" GrpcServices="Client">
-      <SourceUrl>https://raw.githubusercontent.com/project-origin/wallet/wallet-v0.1.0-rc.3/src/Protos/wallet.proto</SourceUrl>
+      <SourceUrl>https://raw.githubusercontent.com/project-origin/wallet/wallet-v0.1.0-rc.4/src/Protos/wallet.proto</SourceUrl>
     </Protobuf>
   </ItemGroup>
 </Project>
