--- a/domains/transfer-agreements/TransferAgreements.API/API.IntegrationTests/API.IntegrationTests.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API.IntegrationTests/API.IntegrationTests.csproj
@@ -18,7 +18,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.1" />
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="3.2.0" />
-        <PackageReference Include="Verify.Xunit" Version="20.3.2" />
+        <PackageReference Include="Verify" Version="20.4.0" />
+        <PackageReference Include="Verify.Xunit" Version="20.4.0" />
         <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
