added tool restore

--- a/domains/certificates/Shared/ProjectOriginClients/ProjectOriginClients.csproj
+++ b/domains/certificates/Shared/ProjectOriginClients/ProjectOriginClients.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<Target Name="Updating grpc references" BeforeTargets="PreBuildEvent">
+		<Exec Command="dotnet tool restore"/>
 		<Exec Command="dotnet dotnet-grpc refresh -p $(ProjectDir)"/>
 	</Target>
 
