Added feature flag for running these samples

--- a/domains/certificates/RegistryConnector/Worker/appsettings.Development.json
+++ b/domains/certificates/RegistryConnector/Worker/appsettings.Development.json
@@ -15,5 +15,8 @@
         "Port": 5672,
         "Username": "guest",
         "Password": "guest"
+    },
+    "FeatureFlags": {
+        "RunsProjectOriginIntegrationSample": true
     }
 }
