--- a/domains/certificates/chart/templates/registry-connector-deployment.yaml
+++ b/domains/certificates/chart/templates/registry-connector-deployment.yaml
@@ -58,4 +58,4 @@ spec:
             - name: PROJECTORIGIN__WALLETURL
               value: {{ .Values.projectOrigin.walletUrl }}
             - name: FEATUREFLAGS__RUNSPROJECTORIGININTEGRATIONSAMPLE
-              value: {{ .Values.featureFlags.runsProjectOriginIntegrationSample }}
+              value: "{{ .Values.featureFlags.runsProjectOriginIntegrationSample }}"
