--- a/domains/certificates/chart/templates/registry-connector-deployment.yaml
+++ b/domains/certificates/chart/templates/registry-connector-deployment.yaml
@@ -51,3 +51,11 @@ spec:
                 secretKeyRef:
                   name: {{ .Release.Name }}-rabbitmq-cluster-default-user
                   key: password
+            - name: PROJECTORIGIN__REGISTRYURL
+              value: {{ .Values.projectOrigin.registryUrl }}
+            - name: PROJECTORIGIN__REGISTRYNAME
+              value: {{ .Values.projectOrigin.registryName }}
+            - name: PROJECTORIGIN__WALLETURL
+              value: {{ .Values.projectOrigin.walletUrl }}
+            - name: FEATUREFLAGS__RUNSPROJECTORIGININTEGRATIONSAMPLE
+              value: "{{ .Values.featureFlags.runsProjectOriginIntegrationSample }}"
