--- a/domains/certificates/chart/values.yaml
+++ b/domains/certificates/chart/values.yaml
@@ -16,3 +16,9 @@ metrics:
   prometheus:
     enabled: true
     additionalLabels: {}
+projectOrigin:
+  registryUrl:
+  registryName:
+  walletUrl:
+featureFlags:
+  runsProjectOriginIntegrationSample: false
