--- a/domains/auth/chart/templates/api-init-db-cm.yaml
+++ b/domains/auth/chart/templates/api-init-db-cm.yaml
@@ -8,9 +8,11 @@ metadata:
 data:
   run.sh: |
     pg_isready -U ${PGUSER:-postgres} -h {{ .Release.Name }}-cnpg-cluster-rw -p 5432
-    cat /sql/API.migrations.sql /sql/API.grants.sql | psql auth-database -U ${PGUSER:-postgres} -p 5432 -h {{ .Release.Name }}-cnpg-cluster-rw -f -
+    cat /sql/API.migrations.sql /sql/API.seed.sql /sql/API.grants.sql | psql auth-database -U ${PGUSER:-postgres} -p 5432 -h {{ .Release.Name }}-cnpg-cluster-rw -f -
   API.migrations.sql: |
 {{ .Files.Get "API.migrations.sql" | indent 4 }}
+  API.seed.sql: |
+{{ .Files.Get (printf "%s" .Values.api.setup.seedFile) | indent 4 }}
   API.grants.sql: |
     START TRANSACTION;
     REVOKE ALL ON ALL TABLES IN SCHEMA public FROM auth;
