--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -27,6 +27,8 @@
     "Oidc:FrontendRedirectUri": "https://example.com",
     "Oidc:ResueSubject": "false",
     "Otlp:ReceiverEndpoint": "http://localhost:4317",
+    "Azure:StorageAccountName": "",
+    "Azure:StorageAccountKey": "",
     "IdentityProvider:Providers": [
         "MitID_Private",
         "MitID_Professional",
