--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -27,8 +27,8 @@
     "Oidc:FrontendRedirectUri": "https://example.com",
     "Oidc:ResueSubject": "false",
     "Otlp:ReceiverEndpoint": "http://localhost:4317",
-    "Azure:StorageAccountName": "",
-    "Azure:StorageAccountKey": "",
+    "Azure:StorageAccountName": "account-name",
+    "Azure:StorageAccountKey": "account-key",
     "IdentityProvider:Providers": [
         "MitID_Private",
         "MitID_Professional",
