--- a/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
+++ b/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
@@ -8,7 +8,9 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
 WORKDIR /src
 COPY ["TransferAgreements.API/API/API.csproj", "TransferAgreements.API/API/"]
+COPY ["ProjectOriginClients.API/ProjectOriginClients.csproj", "ProjectOriginClients/"]
 RUN dotnet restore "TransferAgreements.API/API/API.csproj"
+RUN dotnet restore "ProjectOriginClients/ProjectOriginClients.csproj"
 COPY . .
 WORKDIR "/src/TransferAgreements.API/API"
 RUN dotnet build "API.csproj" -c Release -o /app/build
