--- a/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
@@ -49,7 +49,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Shared\ProjectOriginClients\ProjectOriginClients.csproj" />
+      <ProjectReference Include="..\Shared\ProjectOriginClients\ProjectOriginClients.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include=".config\dotnet-tools.json" />
     </ItemGroup>
 
 </Project>
