--- a/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
+++ b/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
@@ -8,15 +8,13 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
 WORKDIR /src
 COPY ["TransferAgreements.API/API/API.csproj", "TransferAgreements.API/API/"]
-COPY ["TransferAgreements.API/Shared/ProjectOriginClients/ProjectOriginClients.csproj", "TransferAgreements.API/Shared/ProjectOriginClients/"]
 RUN dotnet restore "TransferAgreements.API/API/API.csproj"
-RUN dotnet restore "TransferAgreements.API/Shared/ProjectOriginClients/ProjectOriginClients.csproj"
 COPY . .
 WORKDIR /src
-RUN dotnet build -c Release -o /app/build
+RUN dotnet build "API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 
