Second try from oai

--- a/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
+++ b/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
@@ -12,6 +12,7 @@ COPY . .
 WORKDIR /src/TransferAgreements.API/API
 RUN dotnet restore
 RUN dotnet tool install --global dotnet-grpc --version 2.54.0
+ENV PATH="${PATH}:/root/.dotnet/tools"
 RUN dotnet build -c Release -o /app/build
 
 FROM build AS publish
