--- a/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
+++ b/domains/transfer-agreements/TransferAgreements.API/API/Dockerfile
@@ -1,6 +1,5 @@
 ARG SDK_VERSION
 ARG RUNTIME_VERSION
-
 FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION}-alpine3.17 AS base
 WORKDIR /app
 EXPOSE 80
@@ -8,18 +7,20 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
 WORKDIR /src
+COPY ["TransferAgreements.API/API/API.csproj", "TransferAgreements.API/API/"]
+COPY ["ProjectOriginClients/ProjectOriginClients.csproj", "TransferAgreements.API/Shared/ProjectOriginClients/"]
+RUN dotnet restore "TransferAgreements.API/API/API.csproj"
 COPY . .
-WORKDIR /src/TransferAgreements.API/API
-RUN dotnet restore
-RUN dotnet tool install --global dotnet-grpc --version 2.55.0
-ENV PATH="${PATH}:/root/.dotnet/tools"
-RUN dotnet build -c Release -o /app/build
+WORKDIR /src
+RUN dotnet build "API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
+
 RUN apk add --no-cache tzdata
+
 WORKDIR /app
 COPY --from=publish /app/publish .
 HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
